<resources>
    <string name="app_name">Calculatrice</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="clear">C</string>
    <string name="parenthese1">(</string>
    <string name="parenthese2">)</string>
    <string name="decimal">.</string>
    <string name="history">H</string>
    <string name="equals">=</string>
    <string name="backspace">←</string>

    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sin">sin</string>
    <string name="pi">π</string>
    <string name="log">log</string>
    <string name="exp">e</string>
    <string name="sqrt"><sup><small>2</small></sup>√x</string>
    <string name="cbrt"><sup><small>3</small></sup>√x</string>
    <string name="square">x<sup><small>2</small></sup></string>
    <string name="cube">x<sup><small>3</small></sup></string>
    <string name="pow">x<sup><small>y</small></sup></string>
    <string name="prime">prime</string>
    <string name="round">round</string>
    <string name="log10">log<sub><small>10</small></sub></string>
    <string name="rand">rand</string>


    <string name="displayHint"></string>
</resources>