<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/displayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/displayHint"
        android:textColor="@color/accent_white"
        android:textSize="48sp"
        android:textAlignment="textEnd"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="40dp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="clearButtonPush"
            android:text="@string/clear"
            android:textColor="@color/accent_green"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/button17"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="equalButtonPush"
            android:text="@string/equals"
            android:textColor="@color/accent_green"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="decimalButtonPush"
            android:text="@string/decimal"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="subtractButtonPush"
            android:text="@string/subtract"
            android:textColor="@color/accent_green"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button9" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="nineButtonPush"
            android:text="@string/nine"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button10" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="eightButtonPush"
            android:text="@string/eight"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button11" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="addButtonPush"
            android:text="@string/add"
            android:textColor="@color/accent_green"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button10"
            app:layout_constraintTop_toBottomOf="@+id/button13" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="sixButtonPush"
            android:text="@string/six"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button11"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="fiveButtonPush"
            android:text="@string/five"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button15" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/button_background"
            android:onClick="backspaceButtonPush"
            android:text="@string/backspace"
            android:textColor="@color/accent_green"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="zeroButtonPush"
            android:text="@string/zero"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/button7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/button8"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/button_background"
            android:onClick="fourButtonPush"
            android:text="@string/four"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/button_background"
            android:onClick="oneButtonPush"
            android:text="@string/one"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button20" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginStart="28dp"
            android:background="@drawable/button_background"
            android:onClick="sevenButtonPush"
            android:text="@string/seven"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="multiplyButtonPush"
            android:text="@string/multiply"
            android:textColor="@color/accent_green"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button17" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="threeButtonPush"
            android:text="@string/three"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button15"
            app:layout_constraintTop_toBottomOf="@+id/button18" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="twoButtonPush"
            android:text="@string/two"
            android:textColor="@color/accent_white"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button19" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="divideButtonPush"
            android:text="@string/divide"
            android:textColor="@color/accent_green"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="parCloseButtonPush"
            android:text="@string/parenthese2"
            android:textColor="@color/accent_green"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button19"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/button_background"
            android:onClick="parOpenButtonPush"
            android:text="@string/parenthese1"
            android:textColor="@color/accent_green"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/button20"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <ListView
            android:id="@+id/history"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/previousCalculationView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/displayEditText"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="31dp" />

</androidx.constraintlayout.widget.ConstraintLayout>